tests/type-errors/04-mismatch-reverse.flt
// Type mismatch: reverse order
// --- Command: dotnet run --project FunLang -- --emit-type --expr "true + 1" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected bool but got int
 --> <expr>:1:0-4
   = hint: Check that all branches of your expression return the same type
